[gd_scene load_steps=9 format=3 uid="uid://la6he6vwubnb"]

[ext_resource type="PackedScene" uid="uid://1s5qidco641t" path="res://Characters/CharacterBase.tscn" id="1_rf7ub"]
[ext_resource type="Script" path="res://Characters/Campaign/CampaignEnemy.gd" id="2_pqw3d"]
[ext_resource type="PackedScene" uid="uid://cy12nf62sv60i" path="res://Debug/VectorCube.tscn" id="3_3vsup"]
[ext_resource type="Script" path="res://addons/StateMachine/StateMachine/state_machine.gd" id="3_7r2cl"]
[ext_resource type="Script" path="res://Characters/Campaign/GuardState.gd" id="3_h5c2t"]
[ext_resource type="PackedScene" uid="uid://bd2fp3xjnl5vp" path="res://Characters/Campaign/VisionCone.tscn" id="3_u6o4h"]
[ext_resource type="Script" path="res://Characters/Campaign/AlertState.gd" id="5_geefd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_drlm1"]
albedo_color = Color(1, 0.725141, 0.52472, 1)
subsurf_scatter_strength = 1.0
subsurf_scatter_skin_mode = true

[node name="CampaignEnemy" instance=ExtResource("1_rf7ub")]
script = ExtResource("2_pqw3d")
starting_weapon = 0

[node name="NavAgent" type="NavigationAgent3D" parent="." index="0"]

[node name="StateMachine" type="Node" parent="." index="1" node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7r2cl")
initial_state = NodePath("GuardState")

[node name="GuardState" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_h5c2t")
enemy = NodePath("../..")

[node name="AlertState" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_geefd")
enemy = NodePath("../..")

[node name="TargetCast" type="RayCast3D" parent="." index="3"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 3
debug_shape_custom_color = Color(0, 0.54902, 0.282353, 1)

[node name="Weapons" parent="." index="4"]
transform = Transform3D(0.844383, -0.0737795, 0.530636, -0.254972, 0.815764, 0.519151, -0.471177, -0.57366, 0.670005, 0.168255, 1.46293, -0.381236)

[node name="LookHelper" type="Node3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="VisionCone" parent="LookHelper" index="0" node_paths=PackedStringArray("parent") instance=ExtResource("3_u6o4h")]
unique_name_in_owner = true
transform = Transform3D(10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, 0)
visible = false
parent = NodePath("../..")

[node name="VectorCube" parent="AimHelper" index="0" instance=ExtResource("3_3vsup")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false

[node name="ShootCast" parent="AimHelper" index="2"]
visible = false
collision_mask = 13

[node name="Skeleton3D" parent="Puppet" index="2"]
bones/1/position = Vector3(-9.01623e-10, 0.896551, -0.0641973)
bones/2/rotation = Quaternion(-0.142943, 0.000905337, 0.00246783, 0.989727)
bones/4/rotation = Quaternion(0.0831062, 0.0131227, 0.018119, 0.99629)
bones/5/rotation = Quaternion(-0.0225248, -0.000137659, -0.00104792, 0.999746)
bones/7/rotation = Quaternion(-0.188519, 0.258135, -0.489027, 0.811591)
bones/8/rotation = Quaternion(0.25739, 0.0352075, -0.0501226, 0.964364)
bones/9/rotation = Quaternion(-0.00789621, -0.334656, -0.0178206, 0.942139)
bones/11/rotation = Quaternion(-0.137544, -0.0284754, 0.157726, 0.977442)
bones/12/rotation = Quaternion(-0.0728706, -0.00440988, -0.0389535, 0.996571)
bones/14/rotation = Quaternion(0.0636625, -0.171804, -0.0808735, 0.97974)
bones/15/rotation = Quaternion(0.0688573, 0.146545, 0.0441172, 0.985818)
bones/17/rotation = Quaternion(-0.304845, -0.0308211, 0.276646, 0.910816)
bones/18/rotation = Quaternion(-0.0645516, 0.0977242, -0.0941116, 0.988649)
bones/20/rotation = Quaternion(0.199982, 0.117443, 0.509002, 0.828934)
bones/21/rotation = Quaternion(0.695752, -0.025747, 0.135472, 0.704922)
bones/22/rotation = Quaternion(0.131459, 0.265606, -0.0643637, 0.952906)
bones/24/rotation = Quaternion(-0.131172, 0.0436886, -0.137397, 0.98082)
bones/25/rotation = Quaternion(-0.0607531, 0.0137953, 0.0224454, 0.997805)
bones/27/rotation = Quaternion(0.0957066, 0.160846, 0.105821, 0.976612)
bones/28/rotation = Quaternion(0.095809, -0.129383, -0.073335, 0.984227)
bones/30/rotation = Quaternion(-0.522354, -0.384609, 0.592754, 0.477352)
bones/31/rotation = Quaternion(-0.291467, -0.110498, 0.336933, 0.888433)
bones/33/rotation = Quaternion(-0.589018, 0.225783, -0.159608, 0.759345)
bones/34/rotation = Quaternion(-0.0722558, 0.00388334, 0.110702, 0.991216)
bones/35/rotation = Quaternion(0.263699, -0.134337, -0.617539, 0.72874)
bones/36/rotation = Quaternion(0.00495412, -0.00577786, -0.163837, 0.986458)
bones/38/rotation = Quaternion(-0.529367, -0.0648827, 0.327455, 0.779958)
bones/39/rotation = Quaternion(-0.121739, -0.00381931, -0.186514, 0.974873)
bones/40/rotation = Quaternion(0.220349, 0.129974, 0.508636, 0.822097)
bones/41/rotation = Quaternion(0.00495411, 0.00577787, 0.163837, 0.986458)

[node name="Body" parent="Puppet/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_drlm1")

[node name="Head" parent="Puppet/Skeleton3D" index="1"]
transform = Transform3D(-0.999985, -0.00539463, 0.000489665, -0.00539966, 0.98555, -0.169299, 0.000430715, -0.169299, -0.985565, -0.000850815, 1.57602, -0.0406124)

[node name="HeadArea" parent="Puppet/Skeleton3D/Head" index="0"]
collision_layer = 8
collision_mask = 1

[node name="Neck" parent="Puppet/Skeleton3D" index="2"]
transform = Transform3D(-0.999995, -0.00327803, 0.000409679, -0.0032899, 0.976934, -0.213516, 0.000299679, -0.213516, -0.97694, -0.000640412, 1.51332, -0.0269077)

[node name="NeckArea" parent="Puppet/Skeleton3D/Neck" index="0"]
collision_layer = 8
collision_mask = 1

[node name="Chest" parent="Puppet/Skeleton3D" index="3"]
transform = Transform3D(-0.999986, 0.0051439, -0.00108693, 0.00484202, 0.981617, 0.190799, 0.00204839, 0.190791, -0.981629, -1.80822e-09, 1.13472, -0.0868667)

[node name="ChestArea" parent="Puppet/Skeleton3D/Chest" index="0"]
collision_layer = 8
collision_mask = 1

[node name="Stomach" parent="Puppet/Skeleton3D" index="4"]
transform = Transform3D(-1, -3.78941e-09, -3.89234e-07, 3.31093e-08, 0.995501, -0.0947544, 3.87842e-07, -0.0947544, -0.995501, -9.01623e-10, 0.896551, -0.0641973)

[node name="StomachArea" parent="Puppet/Skeleton3D/Stomach" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_UpperArm" parent="Puppet/Skeleton3D" index="5"]
transform = Transform3D(0.984348, 0.170822, -0.0433471, 0.152444, -0.701888, 0.695783, 0.08843, -0.691501, -0.716943, 0.19452, 1.39666, -0.0338918)

[node name="R_UpperArmArea" parent="Puppet/Skeleton3D/R_UpperArm" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_Forearm" parent="Puppet/Skeleton3D" index="6"]
transform = Transform3D(0.963673, -0.266315, -0.0202464, 0.194155, 0.646464, 0.737827, -0.183406, -0.714955, 0.674686, 0.230165, 1.25019, -0.178189)

[node name="R_ForearmArea" parent="Puppet/Skeleton3D/R_Forearm" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_Hand" parent="Puppet/Skeleton3D" index="7"]
transform = Transform3D(0.844383, -0.0737795, 0.530636, -0.254972, 0.815764, 0.519151, -0.471177, -0.57366, 0.670005, 0.175492, 1.38291, -0.324965)

[node name="R_HandArea" parent="Puppet/Skeleton3D/R_Hand" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_UpperArm" parent="Puppet/Skeleton3D" index="8"]
transform = Transform3D(0.976502, -0.196049, 0.0894908, -0.158416, -0.934527, -0.318693, 0.146111, 0.297027, -0.943624, -0.195402, 1.39599, -0.03384)

[node name="L_UpperArmArea" parent="Puppet/Skeleton3D/L_UpperArm" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_Forearm" parent="Puppet/Skeleton3D" index="9"]
transform = Transform3D(0.976188, -0.0128779, 0.216543, -0.053957, -0.981278, 0.184884, 0.210108, -0.192166, -0.958607, -0.236312, 1.20098, 0.0281412)

[node name="L_ForearmArea" parent="Puppet/Skeleton3D/L_Forearm" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_Hand" parent="Puppet/Skeleton3D" index="10"]
transform = Transform3D(0.893887, 0.0244313, -0.447627, 0.102564, -0.983175, 0.151154, -0.436403, -0.181025, -0.881353, -0.238955, 0.99953, -0.0113091)

[node name="L_HandArea" parent="Puppet/Skeleton3D/L_Hand" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_Thigh" parent="Puppet/Skeleton3D" index="11"]
transform = Transform3D(0.486741, 0.0591963, 0.871538, -0.287132, -0.931423, 0.223623, 0.825008, -0.359093, -0.436364, 0.0851499, 0.879062, -0.0593682)

[node name="R_ThighArea" parent="Puppet/Skeleton3D/R_Thigh" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_Shin" parent="Puppet/Skeleton3D" index="12"]
transform = Transform3D(0.477458, 0.0251559, 0.878294, 0.082525, -0.996455, -0.016322, 0.87477, 0.0802744, -0.477842, 0.110022, 0.487715, -0.210245)

[node name="R_ShinArea" parent="Puppet/Skeleton3D/R_Shin" index="0"]
collision_layer = 8
collision_mask = 1

[node name="R_Foot" parent="Puppet/Skeleton3D" index="13"]
transform = Transform3D(0.245939, 0.0720783, 0.966602, -0.853541, -0.456466, 0.25121, 0.459327, -0.886817, -0.0507408, 0.119461, 0.113838, -0.180125)

[node name="R_FootArea" parent="Puppet/Skeleton3D/R_Foot" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_Thigh" parent="Puppet/Skeleton3D" index="14"]
transform = Transform3D(0.496518, -0.0506417, -0.866548, -0.123929, -0.992206, -0.0130241, -0.859134, 0.113857, -0.498924, -0.0851499, 0.879062, -0.0593682)

[node name="L_ThighArea" parent="Puppet/Skeleton3D/L_Thigh" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_Shin" parent="Puppet/Skeleton3D" index="15"]
transform = Transform3D(0.493782, -0.034735, -0.868892, -0.337771, -0.928405, -0.154838, -0.801305, 0.369943, -0.470162, -0.106428, 0.462177, -0.0115301)

[node name="L_ShinArea" parent="Puppet/Skeleton3D/L_Shin" index="0"]
collision_layer = 8
collision_mask = 1

[node name="L_Foot" parent="Puppet/Skeleton3D" index="16"]
transform = Transform3D(0.245938, -0.072076, -0.966602, 0.853542, -0.456465, 0.251208, -0.459326, -0.886817, -0.0507423, -0.11946, 0.113833, 0.127275)

[node name="L_FootArea" parent="Puppet/Skeleton3D/L_Foot" index="0"]
collision_layer = 8
collision_mask = 1

[node name="TargetTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="ShootTimer" type="Timer" parent="." index="10"]
one_shot = true

[connection signal="timeout" from="TargetTimer" to="." method="target_lost"]

[editable path="Weapons/Pistol"]
[editable path="Weapons/Pistol/Mesh"]
[editable path="Weapons/SMG"]
[editable path="Weapons/SMG/Mesh"]
[editable path="Weapons/Rifle"]
[editable path="Weapons/Shotgun"]
[editable path="Weapons/Sniper"]
[editable path="Puppet"]
